Skip to content

embedded video triggers X-error

Some users are reporting crashes when using embedded video in Qt intf.

The most complete log seems to be this one:

[00000449] main video output debug: window size: 656x368
[00000449] main video output debug: looking for video output module: 6 candidate
s
[00000449] xvideo video output debug: adaptor 0, port 131, format 0x32315659 (YV
12) planar
[00000452] main window debug: looking for vout window module: 2 candidates
[00000452] qt4 window debug: waiting for interface...
[00000452] qt4 window debug: requesting window...
[00000403] qt4 interface debug: Video was requested -1, -1
[????????] x11 video output error: X11 request 59.0 failed with error code 8:
 BadMatch (invalid parameter attributes)
X Error of failed request:  BadMatch (invalid parameter attributes)
  Major opcode of failed request:  59 (X_SetClipRectangles)
  Serial number of failed request:  53879
  Current serial number in output stream:  53972
Locking assertion failure.  Backtrace:
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) /usr/lib/libxcb-xlib.so.0 [0xb1ade767]
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) /usr/lib/libxcb-xlib.so.0(xcb_xlib_lock+0x2e) [0xb1ade81e]
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) /usr/lib/libX11.so.6 [0xb1c70ba9]
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) /usr/lib/libXrender.so.1(XRenderFreePicture+0x41) [0xb1de2ce1]
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) /usr/lib/libQtGui.so.4 [0xb22a5a8f]
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) /usr/lib/libQtGui.so.4 [0xb22a64fa]
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) /usr/lib/libQtGui.so.4(_ZN7QPixmap5derefEv+0x5d) [0xb229bffd]
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) /usr/lib/libQtGui.so.4(_ZN7QPixmapD2Ev+0x2d) [0xb229e7bd]
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) /usr/lib/libQtGui.so.4 [0xb22a0b9a]
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) /usr/lib/libQtGui.so.4 [0xb22a0d9f]
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) /usr/lib/libQtGui.so.4 [0xb22a084a]
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) /lib/libc.so.6(exit+0x89) [0xb7c7c6c9]
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) /usr/lib/libX11.so.6 [0xb1c6954e]
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) ./modules/video_output/x11/.libs/libxvideo_plugin.so [0xae843910]
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) /usr/lib/libX11.so.6(_XError+0xd9) [0xb1c69629]
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) /usr/lib/libX11.so.6 [0xb1c71548]
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) /usr/lib/libX11.so.6(_XReply+0x152) [0xb1c718f2]
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) /usr/lib/libX11.so.6(XGetImage+0x99) [0xb1c4e2b9]
[#18](https://code.videolan.org/videolan/vlc/-/issues/18) /usr/lib/libQtGui.so.4 [0xb22a880e]
[#19](https://code.videolan.org/videolan/vlc/-/issues/19) /usr/lib/libQtGui.so.4(_ZNK7QPixmap7toImageEv+0x3b) [0xb229c26b]

KDE apps are hit by similar errors - e.g.

http://bugs.kde.org/show_bug.cgi?id=166664

Anyone experiencing this crash please post the Qt4 version in use.

Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information