Enable embedded video with Qt >= 4.3 - hopefully fixes #2136