modules/gui/qt4/qt4.cpp
@@ -213,7 +213,7 @@ vlc_module_begin();
 
         set_callbacks( OpenDialogs, Close );
 
-#if 0
+#if !defined (Q_WS_X11) || HAS_QT43
     add_submodule();
         set_capability( "vout window", 50 );
         set_callbacks( WindowOpen, WindowClose );
